Consulta el nuevo endpoint de filtrado de estudiantes para los grupos
